--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,9 +8,20 @@
   </head>
   <body>
     <h1>Dynamic Quote Generator</h1>
-    <div id="quoteDisplay"></div><br>
+    <div id="quoteDisplay"></div>
+    
     <div class="mint">
       <button id="newQuote">Show New Quote</button>
+    </div>
+
+    <div class="men">
+      <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+      <input
+        id="newQuoteCategory"
+        type="text"
+        placeholder="Enter quote category"
+      />
+      <button id="addQuoteButton" onclick="addQuote()">Add Quote</button>
     </div>
     <script src="script.js"></script>
   </body>
