--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Dynamic Quote Generator</h1>
-    <div id="quoteDisplay"></div>
-    
-    <div class="mint">
-      <button id="newQuote">Show New Quote</button>
+    <div class="foine">
+      <h1>Dynamic Quote Generator</h1>
+      <div id="quoteDisplay"></div>
+
+      <div class="mint">
+        <button id="newQuote">Show New Quote</button>
+      </div>
     </div>
 
+    <!-- 
     <div class="men">
       <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
       <input
@@ -22,7 +25,7 @@
         placeholder="Enter quote category"
       />
       <button id="addQuoteButton" onclick="addQuote()">Add Quote</button>
-    </div>
+    </div> -->
     <script src="script.js"></script>
   </body>
 </html>
