--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -13,19 +13,20 @@
 
       <div class="mint">
         <button id="newQuote">Show New Quote</button>
+        <button id="exportQuotes">Export Quotes</button>
+        <input type="file" id="importQuotes" accept=".json" />
+      </div>
+
+      <div class="quote-form">
+        <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
+        <input
+          type="text"
+          id="newQuoteCategory"
+          placeholder="Enter quote category"
+        />
+        <button id="addQuoteBtn">Add Quote</button>
       </div>
     </div>
-
-    <!-- 
-    <div class="men">
-      <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-      <input
-        id="newQuoteCategory"
-        type="text"
-        placeholder="Enter quote category"
-      />
-      <button id="addQuoteButton" onclick="addQuote()">Add Quote</button>
-    </div> -->
     <script src="script.js"></script>
   </body>
 </html>
