Enhance Dynamic Quote Generator with category filtering and data persistence
- Added a simple category filter dropdown to index.html for selecting quote categories.
- Implemented populateCategories() to dynamically list unique categories from stored quotes.
- Added filterQuotes() function to display quotes based on the selected category.
- Integrated categoryFilter event listener for real-time filtering.
- Preserved existing add, import, and export quote functionality.
- Ensured compatibility with localStorage and sessionStorage for data persistence.
- Kept overall structure simple and clean while improving user interactivity.

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -11,12 +11,14 @@
       <h1>Dynamic Quote Generator</h1>
       <div id="quoteDisplay"></div>
 
+      <!-- Buttons -->
       <div class="mint">
         <button id="newQuote">Show New Quote</button>
         <button id="exportQuotes">Export Quotes</button>
         <input type="file" id="importQuotes" accept=".json" />
       </div>
 
+      <!-- Add Quote Form -->
       <div class="quote-form">
         <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
         <input
@@ -25,6 +27,14 @@
           placeholder="Enter quote category"
         />
         <button id="addQuoteBtn">Add Quote</button>
+      </div>
+
+      <!-- Category Filter Dropdown -->
+      <div class="filter-section">
+        <label for="categoryFilter">Filter by Category:</label>
+        <select id="categoryFilter">
+          <option value="all">All Categories</option>
+        </select>
       </div>
     </div>
     <script src="script.js"></script>
